# EnglishLearningBot

./: .env  .env.example  Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  readme.md
src/: main.py
src/database/: seeds.py  session.py
src/database/migrations/: env.py
src/database/migrations/versions/: 07bf3635e7a5_added_has_notifications_column_and_.py  080a7b0047a0_added_unique_constraint_on_name_in_.py  24accec9c870_added_answers_table.py  28dca2e81e0b_added_cascade_delete_in_answer_table.py  3e3268732f5a_added_task_types_table.py  4af1fa1ad7a9_added_users_table.py  4cc13aba11ff_added_column_last_activity_to_users_.py  674c63e313cd_added_cascade_delete_in_task_examples_.py  a959d440fbe9_added_unique_constraint_on_name_in_task_.py  aa86d62acd2b_added_topics_table.py  b6e9f6d53309_added_task_example_table.py  c1b38ea5a193_added_column_last_activity_to_users_.py
src/database/models/: __init__.py  answer.py  base.py  task_example.py  task_type.py  topic.py  user.py
src/database/seeds/: __init__.py  task_example_seed.py  task_type_seed.py  topic_seed.py
src/schemas/: answer.py  task.py  task_type.py  topic.py  user.py
src/services/: exercise_service.py  gigachat_service.py  user_service.py
src/settings/: logging.py  settings.py
src/telegram/: bot.py  common.py  middlewares.py  notifications.py
src/telegram/base/: constants.py
src/telegram/handlers/: __init__.py  user.py
src/telegram/tasks/: handler.py  keyboards.py  state.py
src/telegram/user/: handler.py  keyboards.py
