[project]
name = "englishbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil",email = "daniil.karpenk0@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "alembic (>=1.15.1,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiogram (>=3.18.0,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "langchain-gigachat (>=0.3.8,<0.4.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
